--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# data folder
-data/
-plots/
+# ignore content of folders
+data/*
+plots/*
+
+# ignore folders completely
+data - Copy/
+plots - Copy/
